# ARES-Icarus

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  config.json  pyproject.toml
analysis/stability/: frequency_response.py  linearize.py  robustness.py  root_locus.py
docs/: Icarus_roadmap.md  architecture.excalidraw  cpp_build.md  mechanics_notes.md  rerun_layout.rbl  stability_analysis.md
learn-rocket-dynamics/: 01_pendulum.ipynb  README.md  plotting.py  utils.py
modules/math/: CMakeLists.txt
modules/math/include/: integrator.h
modules/math/src/: integrator.cpp
src/: main.cpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/control/: CMakeLists.txt  config.cpp  config.h  controller.cpp  controller.h  hoverslam.cpp  pid.cpp
src/dynamics/: CMakeLists.txt  constants.h  rocket_1dof.cpp  rocket_1dof.h  rocket_3dof.cpp  rocket_3dof.h  state_indices.h
src/environment/: CMakeLists.txt  landing_pad.cpp  landing_pad.h  wind_model.cpp  wind_model.h
src/gnc/control/: CMakeLists.txt  controller.cpp  controller.h  pid_controller.cpp  pid_controller.h
src/gnc/guidance/: CMakeLists.txt  cascade_guidance.cpp  cascade_guidance.h  horizontal_guidance.cpp  horizontal_guidance.h
src/sim/: CMakeLists.txt  logger.cpp  logger.h  simulator.cpp  simulator.h
tools/: plot_success_trajectory.py  plot_trajectory.py  rerun_blueprint 2.py  rerun_blueprint.py
